--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,24 @@
 		<title>
 			April Compass
 		</title>
+
+		<script src="index.js" defer></script>
+		<style>
+			html, body {
+				margin: 0;
+				width: 100%;
+				height: 100%;
+				color: #333;
+			}
+
+			#compass {
+				width: 100%;
+				height: 100%;
+			}
+		</style>
 	</head>
 
-	<body></body>
+	<body>
+		<div id="compass"></div>
+	</body>
 </html>
